--- a/HTML-OG-CSS/index.html
+++ b/HTML-OG-CSS/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css" type="text/css">
         <title>Forside</title>
     </head>
     <body>
@@ -12,15 +13,64 @@
                     <a href="index.html">Logo</a>
                 </span>
                 <ul>
-                    <li><a href="about.html"></a>About</li>
-                    <li><a href="#"></a>Subrscribe</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Subscribe</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
             <h1>Hallo world!</h1>
             <p>Slagord</p>
         </header>
+        <main>
+            <section>
+                <h2>Latest news</h2>
+                <article>
+                    <img src="img/cat-8197577_640.jpg" alt="Grå katt som koser seg">
+                    <h3>Grå pus</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a href="#" class="read-more-btn">Les mer</a>
+                </article>
+                <article>
+                    <img src="img/turtle-8105993_640.jpg" alt="En kul skilpadde som dukker opp i havoverflaten">
+                    <h3>En skilpadde</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a href="#" class="read-more-btn">Les mer</a>
+                </article>
+                <article>
+                    <img src="img/willow-warbler-8071472_640.jpg" alt="En liten pippip">
+                    <h3>En liten pippip</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a href="#" class="read-more-btn">Les mer</a>
+                </article>
+            </section>
+        </main>
+        <section>
+            <div id="pynt">
 
-
+            </div>
+            <h2>About</h2>
+            <p>Lorem ipsum tekst.</p>
+        </section>
+        <section>
+            <h3>Subscribe</h3>
+            <form>
+                <label for="email-signup">Email for newsletter sign-up</label>
+                <input type="email" id="email-signup">
+                <input type="submit" value="Sign up">
+            </form>
+        </section>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Subscribe</a></li>
+                </ul>
+            </nav>
+            <ul id="social-icons">
+                <li>f</li>
+                <li>i</li>
+                <li>p</li>
+            </ul>
+        </footer>
     </body>
 </html>
