--- a/HTML-OG-CSS/index.html
+++ b/HTML-OG-CSS/index.html
@@ -13,7 +13,7 @@
                     <a href="index.html">Logo</a>
                 </span>
                 <ul>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#about-section">About</a></li>
                     <li><a href="#">Subscribe</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -44,14 +44,14 @@
                 </article>
             </section>
         </main>
-        <section>
+        <section id="about-section">
             <div id="pynt">
 
             </div>
             <h2>About</h2>
             <p>Lorem ipsum tekst.</p>
         </section>
-        <section>
+        <section id="subscribe">
             <h3>Subscribe</h3>
             <form>
                 <label for="email-signup">Email for newsletter sign-up</label>
